--- a/index.html
+++ b/index.html
@@ -67,23 +67,26 @@
 
        <!-- =====OUR COMMITMENT===== -->
 
-       <!-- <section class="our-commitment">
+       <section class="our-commitment">
       <img class="our-commitment__img" src="./images/boy.png" alt="the handsome boy on the left is making coffee" srcset="./images/boy.png 1x, ./images/boy@2x.png 2x">
       <div class="our-commitment__box">
+        <img class="mobile-img" style="display: none;" src="./images/mobiloe-img.jpg" alt="mobile" width="327" height="400">
         <h2 class="our-commitment__head">Our commitment</h2>
-      <p style="width: 540px;" class="our-commitment__desc">We’re built on a simple mission and a commitment to doing good along the way. We want to make it easy for you to discover and brew the world’s best coffee at home. It all starts at the source. To locate the specific lots we want to purchase, we travel nearly 60 days a year trying to understand the challenges and opportunities in each of these places. We collaborate with exceptional coffee growers and empower a global community of farmers through with well above fair-trade benchmarks. We also offer training, support farm community initiatives, and invest in coffee plant science. Curating only the finest blends, we roast each lot to highlight tasting profiles distinctive to their native growing region.</p>
+    <div class="our-commitment__card">
+      <p class="our-commitment__desc">We’re built on a simple mission and a commitment to doing good along the way. We want to make it easy for you to discover and brew the world’s best coffee at home. It all starts at the source. To locate the specific lots we want to purchase, we travel nearly 60 days a year trying to understand the challenges and opportunities in each of these places. We collaborate with exceptional coffee growers and empower a global community of farmers through with well above fair-trade benchmarks. We also offer training, support farm community initiatives, and invest in coffee plant science. Curating only the finest blends, we roast each lot to highlight tasting profiles distinctive to their native growing region.</p>
+    </div>
       </div>
-       </section> -->
+       </section>
 
         <!-- ====Uncompromising quality==== -->
 
-        <!-- <section class="uncompromising-quality">
+        <section class="uncompromising-quality">
          <div class="uncompromising-quality__box">
           <h1 class="uncompromising-quality__head">Uncompromising quality</h1>
           <p class="uncompromising-quality__desc">Although we work with growers who pay close attention to all stages of harvest and processing, we employ, on our end, a rigorous quality control program to avoid over-roasting or baking the coffee dry. Every bag of coffee is tagged with a roast date and batch number. Our goal is to roast consistent, user-friendly coffee, so that brewing is easy and enjoyable.</p>
          </div>
          <img class="uncompromising-quality__img" src="./images/coffee.png" alt="nice coffee on the left" width="445" height="474" srcset="./images/coffee.png 1x, ./images/coffee@2x.png 2x">
-        </section> -->
+        </section>
 
         <!-- ====Our headquarters==== -->
 
