Add footer section responsive

--- a/index.html
+++ b/index.html
@@ -90,13 +90,13 @@
 
         <!-- ====Our headquarters==== -->
 
-        <!-- <section class="our-headquarters">
+        <section class="our-headquarters">
           <h1 class="our-headquarters__head">Our headquarters</h1>
-          <div class="our-headquarters__country"> -->
+          <div class="our-headquarters__country">
 
           <!-- ====UNITED KINGDOM==== -->
 
-            <!-- <div class="our-headquarters__united-kingdom">
+            <div class="our-headquarters__united-kingdom">
               <img class="our-headquarters__united-kingdom-img" src="./images/unated-kindom.svg" alt="this is UK country" width="40" height="50">
               <h3 class="our-headquarters__united-kingdom-haed">United Kingdom</h3>
               <address class="our-headquarters__united-kingdom-desc">
@@ -105,11 +105,11 @@
                 SY6 1YA
                 <br></address>
                 <a class="tel" href="tel:+441241918425">+44 1241 918425</a>
-            </div> -->
+            </div>
 
          <!-- ====CANADA COUNTRY==== -->
 
-            <!-- <div class="our-headquarters__united-kingdom">
+            <div class="our-headquarters__united-kingdom">
               <img class="our-headquarters__united-kingdom-img" src="./images/canada.svg" alt="this is Canda country" width="51" height="50">
               <h3 class="our-headquarters__united-kingdom-haed">Canada</h3>
               <address class="our-headquarters__united-kingdom-desc canda-desc ">
@@ -117,11 +117,11 @@
                 Toronto <br>
                 Ontario M4P 1A6 <br></address>
                 <a class="tel" href="tel:+14164852997">+1 416 485 2997</a>
-            </div> -->
+            </div>
 
             <!-- =====AUSTRALIA==== -->
 
-            <!-- <div class="our-headquarters__united-kingdom">
+            <div class="our-headquarters__united-kingdom">
               <img class="our-headquarters__united-kingdom-img" src="./images/australia.svg" alt="this is austraila's country" width="48" height="43">
               <h3 class="our-headquarters__united-kingdom-haed">Australia</h3>
               <address class="our-headquarters__united-kingdom-desc australia-desc">
@@ -129,59 +129,59 @@
                 Kewell <br>
                 Victoria <br></address>
                 <a class="tel" href="tel:+61499283629">+61 4 9928 3629</a>
-            </div> -->
+            </div>
 
 
-<!--
+
           </div>
         </section>
      </div>
-    </main> -->
-     <!-- =====FOOTER==== -->
+    </main>
+ <!-- =====FOOTER==== -->
 
-     <!-- <footer class="footer">
-       <div class="container">
-         <div class="footer">
-           <img class="footer__img" src="./images/footer-logo.png" alt="footer img" width="236" height="26"> -->
+ <footer class="footer-site">
+  <div class="container">
+    <div class="footer">
+      <img class="footer__img" src="./images/footer-logo.png" alt="footer img" width="236" height="26">
 
-           <!-- ===SITENAV=== -->
+      <!-- ===SITENAV=== -->
 
-           <!-- <nav class="footer-sitenav">
-             <ul class="footer-sitenav__list">
+      <nav class="footer-sitenav">
+        <ul class="footer-sitenav__list">
 
-               <li class=" footer-sitenav__item">
-                 <a class="footer-sitenav__link" href="#">
-                  HOME
-                 </a>
-               </li>
-
-               <li class="footer-sitenav__item">
-                <a class="footer-sitenav__link" href="#">
-                  ABOUT US
-                </a>
-              </li>
-
-              <li class="footer-sitenav__item">
-                <a class="footer-sitenav__link" href="#">
-                  CREAT YOUR PLAN
-                </a>rererereee
-              </li>
-
-             </ul>
-           </nav> -->
-
-           <!-- <div class="social-network">
-             <a class="social-network__link"  href="#">
-              <img class="social-network__img" src="./images/facebook.svg" alt="facebook img" width="24" height="24">
-             </a>
-             <a class="social-network__link"  href="#"><img class="social-network__img" src="./images/twitter.svg" alt="twitter img" width="24" height="19">
+          <li class=" footer-sitenav__item ">
+            <a class="footer-sitenav__link firs" href="#">
+             HOME
             </a>
-             <a class="social-network__link" href="#">
-              <img class="social-network__img" src="./images/instagram.svg" alt="instagram img" width="24" height="24">
-             </a>
-           </div> -->
-         <!-- </div>
-       </div>
-     </footer> -->
+          </li>
+
+          <li class="footer-sitenav__item">
+           <a class="footer-sitenav__link" href="#">
+             ABOUT US
+           </a>
+         </li>
+
+         <li class="footer-sitenav__item">
+           <a class="footer-sitenav__link" href="#">
+             CREAT YOUR PLAN
+           </a>
+         </li>
+
+        </ul>
+      </nav>
+
+      <div class="social-network">
+        <a class="social-network__link"  href="#">
+         <img class="social-network__img" src="./images/facebook.svg" alt="facebook img" width="24" height="24">
+        </a>
+        <a class="social-network__link"  href="#"><img class="social-network__img" src="./images/twitter.svg" alt="twitter img" width="24" height="19">
+       </a>
+        <a class="social-network__link" href="#">
+         <img class="social-network__img" src="./images/instagram.svg" alt="instagram img" width="24" height="24">
+        </a>
+      </div>
+    </div>
+  </div>
+</footer>
 </body>
 </html
